# markuplm-pre-training

./: README.md  pyproject.toml
markuplm-pre-training/: data_collator.py
markuplm_pretraining/: data_collator.py  html_utils.py  node_utils.py
test/: conftest.py  test_html_utils.py  test_node_utils.py
