[tool.poetry]
name = "markuplm-pre-training"
version = "0.1.0"
description = "Implementation of pre-training for MarkupLM"
authors = ["LiableFish <liablefish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
transformers = "^4.41.0"
datasets = "^2.19.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
