[tool.poetry]
name = "markuplm-pre-training"
version = "0.1.0"
description = "Implementation of pre-training for MarkupLM"
authors = ["LiableFish <liablefish@gmail.com>"]
readme = "README.md"
packages = [{include = "markuplm_pretraining"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
transformers = "^4.41.0"
datasets = "^2.19.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
ipython = "^8.24.0"
beautifulsoup4 = "^4.12.3"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
